--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@
 #language: android
 language: objective-c
 os: osx
+osx_image: xcode9.1
 
 install:
   - git clone https://github.com/flutter/flutter.git --depth 1
